--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-    <h1>SCROLL</h1>
+    <h1>Photo Gallery</h1>
   </header>
   <main>
     <img src="images/img01.jpg" alt="img01" class="img" style="width: 500px; height: auto; border-radius: 20px;">
